--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -35,8 +35,8 @@
   <!-- CABECERA -->
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
     <div class="container-fluid">
-      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
-          class="d-inline-block align-top elLogo"></a>
+      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="Logo InmoGlobal" width="100"
+          height="" class="d-inline-block align-top elLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
         <span class="navbar-toggler-icon"></span>
@@ -80,7 +80,7 @@
     <div class="card mb-3" style="max-width: 1100px; margin:auto; border: none; margin-top: 25px;">
       <div class="row g-0">
         <div class="col-md-4" style="text-align :center; margin: auto;">
-          <img src="./images/beneficio-06.svg" class="img-fluid rounded-start" alt="beneficio-06" style="margin:auto;">
+          <img src="./images/beneficio-001.svg" class="img-fluid rounded-start" alt="Beneficio 1" style="margin:auto;">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -103,7 +103,7 @@
       <div class=" card mb-3" style="max-width: 1100px; margin:auto; border: none;">
         <div class="row g-0">
           <div class="col-md-4" style="text-align: center; margin: auto;">
-            <img src="./images/beneficio-03.svg" class="img-fluid rounded-start" alt="beneficio-03">
+            <img src="./images/beneficio-002.svg" class="img-fluid rounded-start" alt="Beneficio 2">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -125,7 +125,7 @@
     <div class="card mb-3" style="max-width: 1100px; margin:auto; border: none;">
       <div class="row g-0">
         <div class="col-md-4" style="text-align :center; margin: auto;">
-          <img src="./images/beneficio-07.svg" class="img-fluid rounded-start" alt="beneficio-07" style="margin:auto;">
+          <img src="./images/beneficio-003.svg" class="img-fluid rounded-start" alt="Beneficio 3" style="margin:auto;">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -145,7 +145,7 @@
       <div class=" card mb-3" style="max-width: 1100px; margin:auto; border: none;">
         <div class="row g-0">
           <div class="col-md-4" style="text-align: center; margin: auto;">
-            <img src="./images/beneficio-09.svg" class="img-fluid rounded-start" alt="beneficio-09">
+            <img src="./images/beneficio-004.svg" class="img-fluid rounded-start" alt="Beneficio 4">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -185,7 +185,7 @@
         <div class="formasContacto">
           <div>
             <a href="tel:541112345678">
-              <img src="./images/icono-telefono1.png" alt="telefono" />
+              <img src="./images/icono-telefono1.png" alt="teléfono" />
             </a>
           </div>
           <div>
@@ -198,7 +198,7 @@
         <div class="formasContacto">
           <div>
             <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank" rel="noopener">
-              <img src="./images/icono-ubicacion1.png" alt="ubicacion" />
+              <img src="./images/icono-ubicacion1.png" alt="ubicación" />
             </a>
           </div>
           <div>
