--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <!-- CABECERA -->
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
     <div class="container-fluid">
-      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
-          class="d-inline-block align-top elLogo"></a>
+      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="Logo InmoGlobal" width="100"
+          height="" class="d-inline-block align-top elLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
         <span class="navbar-toggler-icon"></span>
@@ -75,13 +75,15 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./images/aplicacion.webp" class="d-block w-100" alt="aplicacion2">
+        <img src="./images/aplicacion.webp" alt="Aplicación adaptable distintos dispositivos" class="d-block w-100"
+          alt="aplicacion2">
       </div>
       <div class="carousel-item">
-        <img src="./images/aplicacion1.webp" class="d-block w-100" alt="aplicacion1">
+        <img src="./images/aplicacion1.webp" alt="Utilizar el Sistema con un dedo" class="d-block w-100"
+          alt="aplicacion1">
       </div>
       <div class="carousel-item">
-        <img src="./images/aplicacion2.webp" class="d-block w-100" alt="aplicacion">
+        <img src="./images/aplicacion2.webp" alt="Trabajar en distintos ámbitos" class="d-block w-100" alt="aplicacion">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#elCarousel" data-bs-slide="prev">
@@ -134,7 +136,7 @@
     <!-- SIDEBAR -->
     <aside>
 
-      <img src="./images/software-adaptable.webp" alt="Aplicacion" />
+      <img src="./images/software-adaptable.webp" alt="Software adaptable" />
 
       <p>
         Nuestro sistema es accesible desde cualquier dispositivo disponible. Accedé en cualquier lugar desde tu celular,
@@ -216,7 +218,7 @@
         <div class="formasContacto">
           <div>
             <a href="tel:541112345678">
-              <img src="./images/icono-telefono1.png" alt="telefono" />
+              <img src="./images/icono-telefono1.png" alt="teléfono" />
             </a>
           </div>
           <div>
@@ -229,7 +231,7 @@
         <div class="formasContacto">
           <div>
             <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank" rel="noopener">
-              <img src="./images/icono-ubicacion1.png" alt="ubicacion" />
+              <img src="./images/icono-ubicacion1.png" alt="ubicación" />
             </a>
           </div>
           <div>
