--- a/planes.html
+++ b/planes.html
@@ -35,8 +35,8 @@
   <!-- CABECERA -->
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
     <div class="container-fluid">
-      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
-          class="d-inline-block align-top elLogo"></a>
+      <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="Logo InmoGlobal" width="100"
+          height="" class="d-inline-block align-top elLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
         <span class="navbar-toggler-icon"></span>
@@ -164,7 +164,7 @@
         <div class="formasContacto">
           <div>
             <a href="tel:541112345678">
-              <img src="./images/icono-telefono1.png" alt="telefono" />
+              <img src="./images/icono-telefono1.png" alt="teléfono" />
             </a>
           </div>
           <div>
@@ -177,7 +177,7 @@
         <div class="formasContacto">
           <div>
             <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank" rel="noopener">
-              <img src="./images/icono-ubicacion1.png" alt="ubicacion" />
+              <img src="./images/icono-ubicacion1.png" alt="ubicación" />
             </a>
           </div>
           <div>
